--- a/client/mvp/package.json
+++ b/client/mvp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mvp",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -17,14 +17,14 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
